fix: toc component should use dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -326,7 +326,7 @@ a.back-to-top {
   max-height: 70vh;
   overflow: auto;
   padding: 1rem;
-  background-color: #fffffe;
+  background-color: #000000;
   border: solid 1.3px #a1a1a1;
   border-right: none;
   z-index: 999;
@@ -338,10 +338,6 @@ a.back-to-top {
 
 #toc::-webkit-scrollbar {
   display: none;
-}
-
-.dark #toc {
-  background-color: #000000;
 }
 
 /* underline */
